# ai-learning-intelligence-system

./: .gitignore  README.md  app.js
ai-service-layer/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ai-service-layer/agent_workspace/agents/URL Summarizer/: MEMORY.md
ai-service-layer/src/: config.py
ai-service-layer/src/backendCalls/: __init__.py  backendStore.py
ai-service-layer/src/models/: __init__.py  learningEvent.py  quiz.py  summary.py
ai-service-layer/src/queueData/: __init__.py  cache.py  tasks.py
ai-service-layer/src/workerQuizGenerator/: __init__.py  chain.py  model.py  prompt.py  service.py
ai-service-layer/src/workerSummarizer/: __init__.py  agent.py  helper.py  service.py
backend/: package.json
backend/controllers/: quizController.js  summaryController.js
backend/models/: LearningArtifact.js
backend/routes/: quizRoutes.js  summaryRoutes.js
backend/services/: aiProcessingService.js  aiResultService.js  quizService.js  summaryAIService.js  summaryService.js
controllers/: authController.js  flashcardController.js
frontend/: .gitignore
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/pages/: Analytics.jsx  AuthPage.jsx  Dashboard.jsx  Landing.css  Landing.jsx  NotFound.jsx  Quiz.jsx  Settings.jsx  SubTopic.jsx  Summary.jsx  Topic.jsx
models/: Flashcard.js
processing-ai-service/: redis_test.py
processing-ai-service/src/: celery_app.py
processing-ai-service/src/config/: redis.py  settings.py
processing-ai-service/src/fetchers/: detector.py  fetch_service.py  (+1 more)
routes/: flashcardRoutes.js
(+30 files in other folders)
