[project]
name = "ai-service-layer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache[redis]>=0.12.3",
    "bs4>=0.0.2",
    "celery>=5.6.3",
    "fastapi[standard]>=0.139.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-openai",
    "swarm-models>=0.3.2",
    "swarms>=13.0.0",
]
